<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ui.ProjectSubmissionActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="400dp" />


    </com.google.android.material.appbar.AppBarLayout>


    <EditText
        android:id="@+id/lastNameField"
        android:layout_width="187dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/myTextColorPrimary"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColor="@color/backgroundColor"
        android:textColorHint="@color/backgroundColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/emailAddressField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/firstNameField"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitButton"
        android:textColor="@color/myTextColorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/githubLinkField"
        app:layout_constraintStart_toStartOf="@+id/githubLinkField"
        app:layout_constraintTop_toBottomOf="@+id/githubLinkField" />

    <EditText
        android:id="@+id/emailAddressField"
        android:layout_width="404dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/myTextColorPrimary"
        android:gravity="center"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColor="@color/backgroundColor"
        android:textColorHint="@color/backgroundColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/githubLinkField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameField" />

    <EditText
        android:id="@+id/githubLinkField"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/myTextColorPrimary"
        android:gravity="center"
        android:hint="@string/project_on_github_link"
        android:inputType="textUri"
        android:textColor="@color/backgroundColor"
        android:textColorHint="@color/backgroundColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="@+id/emailAddressField"
        app:layout_constraintStart_toStartOf="@+id/emailAddressField"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressField" />

    <EditText
        android:id="@+id/firstNameField"
        android:layout_width="187dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/myTextColorPrimary"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColor="@color/backgroundColor"
        android:textColorHint="@color/backgroundColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/emailAddressField"
        app:layout_constraintEnd_toStartOf="@+id/lastNameField"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />


</androidx.constraintlayout.widget.ConstraintLayout>